@@ -1,3 +1,4 @@
 2009-06-13 - Sean Huber (shuber@huberry.com)
   * Initial commit
   * Add Nestable::Tree logic
+  * Rename :foreign_key option to :parent_column
